# NumericalMethods1

./: README.md
Lab1/: CMakeLists.txt
Lab1/src/: Cubic_Spline.cpp  Cubic_Spline.h  Grid_Generator.cpp  Grid_Generator.h  Numerical_Differentiator.cpp  Numerical_Differentiator.h  Point.cpp  Point.h  Spline.h  main.cpp
